// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsContext renders correctly with activeTabId 1`] = `
<div
  className="tabs-context--wrapper"
  data-testid="tabs-context"
>
  <div
    className="tabsWrapper tabs--wrapper compact Compact"
    data-testid="tab-list"
  >
    <ul
      className="tabsList tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={false}
        className="tabWrapper tab--wrapper tabWrapperOverride"
        data-testid="tab"
        role="tab"
      >
        <a
          className="tabInner tab-inner tabInnerOverride"
          onClick={[Function]}
        >
          First
        </a>
      </li>
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tabWrapper tab--wrapper tabWrapperOverride active"
        data-testid="tab"
        role="tab"
      >
        <a
          className="tabInner tab-inner tabInnerOverride"
          onClick={[Function]}
        >
          Second
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
  >
    <div
      className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel non-active non-active"
      data-testid="tab-panel"
      role="tabpanel"
    >
      First slide
    </div>
    <div
      className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      data-testid="tab-panel"
      role="tabpanel"
    >
      Second slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with className 1`] = `
<div
  className="tabs-context--wrapper test"
  data-testid="tabs-context"
>
  <div
    className="tabsWrapper tabs--wrapper compact Compact"
    data-testid="tab-list"
  >
    <ul
      className="tabsList tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tabWrapper tab--wrapper tabWrapperOverride active"
        data-testid="tab"
        role="tab"
      >
        <a
          className="tabInner tab-inner tabInnerOverride"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
  >
    <div
      className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      data-testid="tab-panel"
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with empty props 1`] = `
<div
  className="tabs-context--wrapper"
  data-testid="tabs-context"
>
  <div
    className="tabsWrapper tabs--wrapper compact Compact"
    data-testid="tab-list"
  >
    <ul
      className="tabsList tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tabWrapper tab--wrapper tabWrapperOverride active"
        data-testid="tab"
        role="tab"
      >
        <a
          className="tabInner tab-inner tabInnerOverride"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
  >
    <div
      className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      data-testid="tab-panel"
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with id 1`] = `
<div
  className="tabs-context--wrapper"
  data-testid="tabs-context_test"
  id="test"
>
  <div
    className="tabsWrapper tabs--wrapper compact Compact"
    data-testid="tab-list"
  >
    <ul
      className="tabsList tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tabWrapper tab--wrapper tabWrapperOverride active"
        data-testid="tab"
        role="tab"
      >
        <a
          className="tabInner tab-inner tabInnerOverride"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
  >
    <div
      className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      data-testid="tab-panel"
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;
